--- a/css/style.css
+++ b/css/style.css
@@ -687,8 +687,8 @@ h1, h2, h3, h4, h5,
         padding-left: 0; }
 
 .main-content {
-  float: right;
-  width: calc(100% - 250px); }
+  width: 100%;
+}
   @media (max-width: 991.98px) {
     .main-content {
       width: 100%;
